# TravellingSaleman

./: CMakeLists.txt  Dockerfile  docker-compose.yml  main.cpp  run.bat  run.sh
utility/: mathLib.cpp  mathLib.h
utility/CanvasInteraction/: CanvasInteraction.cpp  CanvasInteraction.h  CanvasInteration.cpp
utility/christofides/: christofides.cpp  christofides.h
utility/classes/: Edge.cpp  Edge.h  Graph.cpp  Graph.h  Vertex.cpp  Vertex.h
